# Multi-Agents-Orchestration-Design-Patterns

./: README.md  app.py  pyproject.toml
agents/: __init__.py  base_agent.py
patterns/: __init__.py  consensus_orchestration.py  hierarchical_orchestration.py  mapreduce_orchestration.py  producer_reviewer_orchestration.py  sequential_orchestration.py
